chore: replace deprecated clazz.newInstance() with .getDeclaredConstructor().newInstance()